# climate-analysis

./: .gitignore  README.md  _quarto.yml  custom.scss  index.ipynb  index.qmd  pyproject.toml  test.txt
.github/workflows/: quarto-publish.yml
css/: callouts.css  code.css  common.scss  custom.scss  dark.scss  default.css  light.scss  quarto-syntax-highlighting-dark.css  quarto-syntax-highlighting-dark.scss  quarto.css  syntax-dark.scss  syntax-light.scss
css/old/: callouts-broken.css  callouts.css  code.css  common-broken.scss  quarto-syntax-highlighting.css
docs/: index.html  index.ipynb  pyproject.toml  robots.txt  search.json  sitemap.xml
docs/_site/: search.json
docs/css/: callouts-climrr.css  callouts.css  quarto-syntax-highlighting-dark.css
docs/docs/: index.html
docs/qmd/: ClimRR.html  chicago.html  illinois.html  intro.html  iris.html  overview.html
docs/qmd/00-GettingStarted/: 0-python.html  1-setup.html  2-intro.html  3-example-groceries.html  (+7 more)
qmd/: ClimRR.ipynb  ClimRR.qmd  _quarto.yml  chicago.ipynb  chicago.qmd  data.qmd  illinois.ipynb  index.qmd  intro.ipynb  iris.ipynb  iris.qmd  overview.ipynb  overview.md  overview.qmd
qmd/00-GettingStarted/: 0-python.ipynb  0-python.md  1-setup.ipynb  1-setup.md  1-setup.qmd  2-intro.ipynb  2-intro.md  2-intro.qmd  3-example-groceries.ipynb  3-example-groceries.md  3-example-groceries.qmd  3-example-groceries.qmd.otter.html  3-example-groceries.qmd.otter.py  3-example.ipynb  4-chicago.ipynb  4-chicago.md
qmd/01-ClimRR/: 0-ClimRR.ipynb  0-ClimRR.md  1-definitions.ipynb  1-definitions.md  1-definitions.qmd  1p5-DataDictionary.md  2-chicago-temp.ipynb  2-chicago-temp.md
qmd/ClimRR/: ClimRR.ipynb  ClimRR.qmd  chicago-temp.ipynb  chicago-temp.qmd  definitions.ipynb
qmd/GettingStarted/: chicago.ipynb  chicago.qmd  example.ipynb  example.qmd  intro.ipynb  intro.qmd  python.ipynb  python.qmd  setup.ipynb  setup.qmd
qmd/_site/: search.json
qmd/extras/: 0-illinois.ipynb  0-illinois.md  0-illinois.qmd  1-iris.ipynb  1-iris.qmd  illinois.ipynb  iris.ipynb
qmd/notebooks/: ClimRR.ipynb  chicago.ipynb  intro.ipynb  setup.ipynb
src/ClimRR/: __init__.py  data.py
(+34 files in other folders)
