requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "climate-analysis"
description = ''
readme = "README.md"
requires-python = ">=3.8"
keywords = []
authors = [
  { name = "Sam Foreman", email = "foremans@anl.gov" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "h5py",
  "seaborn",
  "xarray",
  "rich",
  "hydra-core",
  "wandb",
  "arviz",
  "hydra-colorlog",
  "ipympl",
  "matplotlib",
  "matplotx",
  "geopandas",
  "xagg",
  "numpy",
  "pandas",
  "jupyter",
  "pandas",
  "jupyter-cache",
]
dynamic = ["version"]

[project.optional-dependencies]
dev = [
  "pudb",
  "nodejs",
  "pynvim",
  "neovim",
  "ruff",
  "ruff-lsp",
  "pyproject-flake8",
  "ipython",
  "ptipython",
]

[project.urls]
Documentation = "https://github.com/saforem2/climate-analysis"
Issues = "https://github.com/saforem2/climate-analysis/issues"
Source = "https://github.com/saforem2/climate-analysis"

[tool.hatch.version]
path = "src/ClimRR/__about__.py"

[tool.hatch.build]
exclude = [
  "src/ClimRR/outputs/",
  "**old**",
]

[tool.hatch.metadata]
allow-direct-references = true


[tool.hatch.build.targets.sdist]

[tool.hatch.build.targets.wheel]
packages = ["src/ClimRR"]

[tool.hatch.envs.default]
dependencies = [
  "pytest",
  "pytest-cov",
]
[tool.hatch.envs.default.scripts]
cov = "pytest --cov-report=term-missing --cov-config=pyproject.toml --cov=src/ClimRR --cov=tests"
no-cov = "cov --no-cov"

[[tool.hatch.envs.test.matrix]]
python = ["38", "39", "310", "311"]

[tool.coverage.run]
branch = true
parallel = true
omit = [
  "src/ClimRR/__about__.py",
]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
